--- a/VRChat/69/1261369.html
+++ b/VRChat/69/1261369.html
@@ -80,9 +80,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "EkogjtYZ0PJSCECd+cHjAJCwYynDfC+0LI7xlGS2Hjo="></script>
+    "UqOYHLDL/Pwz6/LJfeHB6JSODV+qQqSTtcfjp035nDA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[眼鏡]Simple眼鏡セット(SHG-19-0301_simple、SHG-21-0106L_simple)","description":"シンプルな眼鏡の詰め合わせ商品です。\n\nテクスチャ無しのマテリアルのみなので、\n2色版と1色版をそれぞれ3種類ずつ用意しています。\n\nマテリアルカラー変えるだけでそれっぽくなるよ。\n\nUV展開自体はされているので塗りたい人は頑張ってください・・・\n\n★☆　拡張テクスチャセット追加販売開始　☆★\n4パターン×2色の全8色を3モデルすべてに用意しました。\n1色版のモデルに追加することで利用可能です。\n\n★☆　軽量版(Quest対応)を追加　☆★\n本体に軽量版を追加しました。\n拡張テクスチャには未対応ですが、ToonLit向けテクスチャ同梱です。\n\n\n仕様\n　作者：@Sharono_vvv\n　ファイル形式：unitypackage + fbx\n　ポリゴン数：通常版　fox 1384/wellington 1404/square 1388\n　　　　　　　軽量版　fox 536/wellington 536/square 544\n　その他：ボーンあり(つる左右)\n　テクスチャ：通常版\n　　　　　　　　なし(マテリアルのみ ※UV展開済み)\n　　　　　　　　→拡張テクスチャパック販売開始\n　　　　　　　軽量版\n　　　　　　　　あり(ToonLit用1色)\n\n拡張テクスチャパック\n　注意：眼鏡自体のモデルは含まれておりません。\n　　　　テクスチャ一式と、セットアップ済prefabのみ提供です。\n　　　　眼鏡セット本体をセットでお買い求めください。\n　　　　軽量版モデルには適用できません。\n　３Ｄモデル：含みません\n　テクスチャ：3モデル×4パターン×2色\n　シェーダー：UTS2.0.7セットアップ済。\n\n\n利用にあたって(利用規約)\n\n　〇：商用、非商用問わずご利用ください。\n　〇：改造、別モデルへのパーツ組み込み等はご自由に。\n　×：ただし、販売モデルそのままの状態での転売や他者への配布は禁止とします。\n　不明点ございましたらお問い合わせください。\n","url":"https://booth.pm/ja/items/1261369","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"200","highPrice":"300"},"image":"https://booth.pximg.net/c/620x620/d84d54f0-8809-4972-baee-3f190b4e9fd3/i/1261369/1154156b-e171-4230-8384-adb479e6bf9b_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="EkogjtYZ0PJSCECd+cHjAJCwYynDfC+0LI7xlGS2Hjo="></script>
+    nonce="UqOYHLDL/Pwz6/LJfeHB6JSODV+qQqSTtcfjp035nDA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -736,7 +736,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
