updated at: 2023-07-05 21:37, 【VRMのみ】NEKO FANTASY いのしし - ちま屋 -Chimaya- - BOOTH

--- a/VRChat/50/1153050.html
+++ b/VRChat/50/1153050.html
@@ -29,7 +29,7 @@
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1153050">
     <meta name="robots" content="max-image-preview:large">
-    <meta name="ga:shop" content="UA-4867980-2">
+    <meta name="ga:shop" content="">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "F8b2aHC2z91HHxVg5p9T8PZ69Ri9PQB+TL78ECuON9Q="></script>
+    "n/nr0WPrLhiZO0D7gp1UZ7P76R/wv4Ryme1vRoO1dhw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRMのみ】NEKO FANTASY いのしし","description":"VRMアバター　「NEKO FANTASY いのしし」\n\nポリゴン数：4706\n\nネコアバターシリーズのいのししの着ぐるみを着たバージョンです。\n\n赤のマフラーのチャトラちゃんと\n緑のマフラーのアメショちゃんの２つ入っていますので\nお好きな方を使ってください。\n\n＜更新履歴＞\n2022.01.31　アウトライン、視点位置の変更をしました。\n2021.11.01　VRChat版を販売終了。VRMのみになりました。\n2021.10.22　VRMファイルに色違いのアメショちゃんを追加。\n2020.04.29　VRChat用のunitypackageをUnity2018に対応。シェーダーをUnlitWFに変更しました。\n2020.03.25\n・VRMのいのししくんのマフラーの文字が「いのしし」に変わりました。\n・VRMのZIPにVRM設定変更用unitypackageを追加しました。\n2019.06.04\n・しっぽとお尻のウェイト、テクスチャを変更しました。\n・クチのアウトラインがきれいに出るように修正しました。\n・unitypackageにOculus Quest用設定を追加しました。\n\n\n\n\n","url":"https://booth.pm/ja/items/1153050","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/1f163e5b-a0e4-46e7-be27-4850d72c7bc9/i/1153050/3d6693b0-9c2f-4a06-ad1f-771552d42341_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="F8b2aHC2z91HHxVg5p9T8PZ69Ri9PQB+TL78ECuON9Q="></script>
+    nonce="n/nr0WPrLhiZO0D7gp1UZ7P76R/wv4Ryme1vRoO1dhw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -106,15 +106,11 @@
         <div class="recaptcha-tag" data-action=
         "booth/checkout_order" data-site-key=
         "6LfF1dcZAAAAAOHQX8v16MX5SktDwmQINVD_6mBF"></div>
-        <div class="market" data-ga-tracking-id="UA-4867980-2"
+        <div class="market" data-ga-tracking-id=""
         data-product-brand="chimaya" data-product-category="208"
         data-product-id="1153050" data-product-list="market_show"
-        data-product-price="500"
-        data-shop-tracking-product-category="3D Characters"
-        data-shop-tracking-product-id="1153050"
-        data-shop-tracking-product-name="【VRMのみ】NEKO FANTASY いのしし"
-        data-shop-tracking-product-price="500" data-tracking=
-        "detail_item" id="items">
+        data-product-price="500" data-tracking="detail_item" id=
+        "items">
           <div class="market"></div>
           <div data-page-type="market" id="js-item"></div>
           <article>
@@ -253,18 +249,12 @@
                                         "chimaya"
                                         data-product-category="208"
                                         data-product-variant=
-                                        "1794702"
-                                        data-shop-tracking-product-id="1153050"
-                                        data-shop-tracking-product-name="【VRMのみ】NEKO FANTASY いのしし"
-                                        data-shop-tracking-product-price="500"
-                                        data-shop-tracking-product-category="3D Characters"
-                                        data-shop-tracking-product-variant="default"
-                                        data-tracking="add_item"
+                                        "1794702" data-tracking=
+                                        "add_item"
                                         data-product-list=
                                         "from market_show via market as gift to add_item"
-                                        data-ga-tracking-id=
-                                        "UA-4867980-2" type=
-                                        "submit"><input type=
+                                        data-ga-tracking-id=""
+                                        type="submit"><input type=
                                         "hidden" name=
                                         "cart_item[variation_id]"
                                         id="cart_item_variation_id"
@@ -286,17 +276,12 @@
                                           data-product-category=
                                           "208"
                                           data-product-variant=
-                                          "1794702"
-                                          data-shop-tracking-product-id="1153050"
-                                          data-shop-tracking-product-name="【VRMのみ】NEKO FANTASY いのしし"
-                                          data-shop-tracking-product-price="500"
-                                          data-shop-tracking-product-category="3D Characters"
-                                          data-shop-tracking-product-variant="default"
-                                          data-tracking="add_item"
+                                          "1794702" data-tracking=
+                                          "add_item"
                                           data-product-list=
                                           "from market_show via market as gift to add_item"
-                                          data-ga-tracking-id=
-                                          "UA-4867980-2" type=
+                                          data-ga-tracking-id=""
+                                          type=
                                           "submit">ギフトとして贈る</button>
                                         </div>
                                       </form>
@@ -324,7 +309,7 @@
                           「ギフトとして贈る」とは</a>
                         </h4>
                         <div class="!p-0" data-has-privacy-policy=
-                        "true" id=
+                        "false" id=
                         "js-item-payment-and-shipping-terms"></div>
                       </div>
                     </div>
@@ -691,7 +676,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
